@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)smtp.c	2.35 (gritter) 1/8/06";
+static char sccsid[] = "@(#)smtp.c	2.36 (gritter) 3/3/06";
 #endif
 #endif /* not lint */
 
@@ -54,6 +54,7 @@ static char sccsid[] = "@(#)smtp.c	2.35 (gritter) 1/8/06";
 #endif	/* HAVE_ARPA_INET_H */
 #endif	/* HAVE_SOCKETS */
 #include <unistd.h>
+#include <setjmp.h>
 
 #include "extern.h"
 #include "md5.h"
@@ -387,6 +388,14 @@ talk_smtp(struct name *to, FILE *fi, struct sock *sp,
 	return 0;
 }
 
+static jmp_buf	smtpjmp;
+
+static void
+onterm(int signo)
+{
+	siglongjmp(smtpjmp, 1);
+}
+
 /*
  * Connect to a SMTP server.
  */
@@ -395,10 +404,18 @@ smtp_mta(char *server, struct name *to, FILE *fi, struct header *hp)
 {
 	struct sock	so;
 	int	use_ssl, ret;
+	sighandler_type	saveterm;
 
 	memset(&so, 0, sizeof so);
 	verbose = value("verbose") != NULL;
 	_debug = value("debug") != NULL;
+	saveterm = safe_signal(SIGTERM, SIG_IGN);
+	if (sigsetjmp(smtpjmp, 1)) {
+		safe_signal(SIGTERM, saveterm);
+		return 1;
+	}
+	if (saveterm != SIG_IGN)
+		safe_signal(SIGTERM, onterm);
 	if (strncmp(server, "smtp://", 7) == 0) {
 		use_ssl = 0;
 		server += 7;
@@ -410,8 +427,10 @@ smtp_mta(char *server, struct name *to, FILE *fi, struct header *hp)
 	} else
 		use_ssl = 0;
 	if (!debug && !_debug && sopen(server, &so, use_ssl, server,
-				use_ssl ? "smtps" : "smtp", verbose) != OKAY)
+				use_ssl ? "smtps" : "smtp", verbose) != OKAY) {
+		safe_signal(SIGTERM, saveterm);
 		return 1;
+	}
 	so.s_desc = "SMTP";
 	ret = talk_smtp(to, fi, &so, server, server, hp);
 	if (!debug && !_debug)
@@ -421,6 +440,7 @@ smtp_mta(char *server, struct name *to, FILE *fi, struct header *hp)
 		smtpbuf = NULL;
 		smtpbufsize = 0;
 	}
+	safe_signal(SIGTERM, saveterm);
 	return ret;
 }
 #else	/* !HAVE_SOCKETS */
